[backend] feat(chaining): add timeout logic to chaining simulations